iidy/tests/snapshots/example_templates_snapshots__auto_discovered_advanced_cloudformation.snap
---
source: tests/example_templates_snapshots.rs
expression: output
---
AWSTemplateFormatVersion: 2010-09-09
Description:
  "!Sub": advanced-app - Advanced multi-tier application infrastructure for production environment
Parameters:
  Environment:
    Type: String
    Default: production
    AllowedValues:
      - development
      - staging
      - production
    Description: Target deployment environment
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock:
        "!Ref": VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-vpc
        - Key: Environment
          Value: production
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-igw
  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId:
        "!Ref": VPC
      InternetGatewayId:
        "!Ref": InternetGateway
  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        "!Ref": VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone:
        "!Select":
          - 0
          - "!GetAZs": ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-public-subnet
        - Key: Type
          Value: Public
  PrivateSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        "!Ref": VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone:
        "!Select":
          - 1
          - "!GetAZs": ""
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-private-subnet
        - Key: Type
          Value: Private
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        "!Ref": VPC
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-public-rt
  PublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId:
        "!Ref": PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        "!Ref": InternetGateway
  PublicSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId:
        "!Ref": PublicSubnet
      RouteTableId:
        "!Ref": PublicRouteTable
  WebSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription:
        "!Sub": advanced-app web tier security group
      VpcId:
        "!Ref": VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.0.0/16
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-web-sg
  AppSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription:
        "!Sub": advanced-app application tier security group
      VpcId:
        "!Ref": VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId:
            "!Ref": WebSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.0.0/16
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-app-sg
  DatabaseSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription:
        "!Sub": advanced-app database tier security group
      VpcId:
        "!Ref": VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId:
            "!Ref": AppSecurityGroup
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-db-sg
  ApplicationLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Name:
        "!Sub": advanced-app-production-alb
      Scheme: internet-facing
      Type: application
      Subnets:
        - "!Ref": PublicSubnet
      SecurityGroups:
        - "!Ref": WebSecurityGroup
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-alb
        - Key: Environment
          Value: production
  TargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Name:
        "!Sub": advanced-app-production-tg
      Port: 8080
      Protocol: HTTP
      VpcId:
        "!Ref": VPC
      HealthCheckPath: /health
      HealthCheckProtocol: HTTP
      HealthCheckIntervalSeconds: 30
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-tg
  LoadBalancerListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            "!Ref": TargetGroup
      LoadBalancerArn:
        "!Ref": ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
  LaunchTemplate:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateName:
        "!Sub": advanced-app-production-lt
      LaunchTemplateData:
        ImageId: ami-0c02fb55956c7d316
        InstanceType: t3.medium
        SecurityGroupIds:
          - "!Ref": AppSecurityGroup
        UserData:
          "!Base64":
            - "!Sub": "#!/bin/bash\nyum update -y\necho \"APP_NAME=advanced-app\" >> /etc/environment\necho \"ENVIRONMENT=production\" >> /etc/environment\n"
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Name
                Value:
                  "!Sub": advanced-app-production-instance
              - Key: Environment
                Value: production
  AutoScalingGroup:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    Properties:
      AutoScalingGroupName:
        "!Sub": advanced-app-production-asg
      LaunchTemplate:
        LaunchTemplateId:
          "!Ref": LaunchTemplate
        Version:
          "!GetAtt": LaunchTemplate.LatestVersionNumber
      MinSize: "2"
      MaxSize: "6"
      DesiredCapacity: "2"
      VPCZoneIdentifier:
        - "!Ref": PrivateSubnet
      TargetGroupARNs:
        - "!Ref": TargetGroup
      HealthCheckType: ELB
      HealthCheckGracePeriod: 300
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-asg
          PropagateAtLaunch: false
        - Key: Environment
          Value: production
          PropagateAtLaunch: true
  DatabaseSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription:
        "!Sub": advanced-app database subnet group
      SubnetIds:
        - "!Ref": PrivateSubnet
        - "!Ref": PublicSubnet
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-db-subnet-group
  Database:
    Type: "AWS::RDS::DBInstance"
    Properties:
      DBInstanceIdentifier:
        "!Sub": advanced-app-production-db
      Engine: postgres
      EngineVersion: "13.7"
      DBInstanceClass: db.r5.large
      MasterUsername: dbadmin
      MasterUserPassword:
        "!Sub": advanced-app-secure-password-123
      AllocatedStorage: 100
      StorageType: gp2
      VPCSecurityGroups:
        - "!Ref": DatabaseSecurityGroup
      DBSubnetGroupName:
        "!Ref": DatabaseSubnetGroup
      BackupRetentionPeriod: 30
      DeleteAutomatedBackups: false
      DeletionProtection: true
      Tags:
        - Key: Name
          Value:
            "!Sub": advanced-app-production-database
        - Key: Environment
          Value: production
Outputs:
  VPCId:
    Description: VPC ID
    Value:
      "!Ref": VPC
    Export:
      Name:
        "!Sub": advanced-app-production-vpc-id
  PublicSubnetId:
    Description: Public Subnet ID
    Value:
      "!Ref": PublicSubnet
    Export:
      Name:
        "!Sub": advanced-app-production-public-subnet-id
  PrivateSubnetId:
    Description: Private Subnet ID
    Value:
      "!Ref": PrivateSubnet
    Export:
      Name:
        "!Sub": advanced-app-production-private-subnet-id
  LoadBalancerDNS:
    Description: Application Load Balancer DNS Name
    Value:
      "!GetAtt": ApplicationLoadBalancer.DNSName
    Export:
      Name:
        "!Sub": advanced-app-production-alb-dns
  DatabaseEndpoint:
    Description: RDS Database Endpoint
    Value:
      "!GetAtt": Database.Endpoint.Address
    Export:
      Name:
        "!Sub": advanced-app-production-db-endpoint
  ApplicationURL:
    Description: Application URL
    Value:
      "!Sub": "http://${ApplicationLoadBalancer.DNSName}"
