iidy/tests/snapshots/example_templates_snapshots__auto_discovered_cloudformation_tags_demo.snap
---
source: tests/example_templates_snapshots.rs
expression: formatted_output
---
AWSTemplateFormatVersion: 2010-09-09
Description: Demonstration of CloudFormation tags with iidy preprocessing
Parameters:
  Environment:
    Type: String
    Default: production
    Description: Target environment
  DatabasePassword:
    Type: String
    NoEcho: true
    MinLength: 8
    Description: Database password
Resources:
  ApplicationBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub tag-demo-app-${AWS::Region}-${AWS::AccountId}-bucket
      VersioningConfiguration:
        Status: Enabled
      Tags:
        - Key: Name
          Value: !Sub tag-demo-app Application Bucket
        - Key: Environment
          Value: !Ref Environment
        - Key: Region
          Value: us-west-2
        - Key: ManagedBy
          Value: iidy
  Database:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: !Sub tag-demo-app-${AWS::Region}-db
      Engine: postgres
      EngineVersion: '13.7'
      DBInstanceClass: db.t3.micro
      MasterUsername: appuser
      MasterUserPassword: !Ref DatabasePassword
      AllocatedStorage: 20
      BackupRetentionPeriod: '7'
      DeleteAutomatedBackups: false
      Tags:
        - Key: Name
          Value: !Sub tag-demo-app ${Environment} Database
        - Key: Environment
          Value: !Ref Environment
        - Key: Engine
          Value: postgres 13.7
        - Key: BackupPolicy
          Value: !Sub Retain-7-days
        - Key: DatabaseId
          Value: !Sub ${AWS::StackName}-primary-db
  ProcessingFunction:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: !Sub tag-demo-app-${Environment}-processor
      Runtime: python3.9
      Handler: index.handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Code:
        ZipFile: !Sub |
          import json
          import boto3

          def handler(event, context):
              """
              tag-demo-app processing function for production environment
              """
              print(f"Processing in region: us-west-2")
              print(f"Environment: production")
              print(f"Database engine: postgres")
              
              # Application logic here
              return {
                  'statusCode': 200,
                  'body': json.dumps({
                      'message': 'Hello from tag-demo-app',
                      'environment': 'production',
                      'region': 'us-west-2'
                  })
              }
      Environment:
        Variables:
          APP_NAME: tag-demo-app
          ENVIRONMENT: !Ref Environment
          DATABASE_HOST: !GetAtt Database.Endpoint.Address
          BUCKET_NAME: !Ref ApplicationBucket
          STACK_NAME: !Ref AWS::StackName
          REGION: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub tag-demo-app Processing Function
        - Key: Environment
          Value: !Ref Environment
        - Key: Component
          Value: backend
  LambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub tag-demo-app-${Environment}-lambda-role
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: DatabaseAndS3Access
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - rds:DescribeDBInstances
                  - rds:Connect
                Resource: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:tag-demo-app-${AWS::Region}-db
              - Effect: Allow
                Action:
                  - s3:GetObject
                  - s3:PutObject
                  - s3:DeleteObject
                Resource: !Sub ${ApplicationBucket}/*
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:*
      Tags:
        - Key: Name
          Value: !Sub tag-demo-app Lambda Execution Role
        - Key: Environment
          Value: !Ref Environment
  ProcessingFunctionLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/lambda/tag-demo-app-${Environment}-processor
      RetentionInDays: 30
      Tags:
        - Key: Name
          Value: !Sub tag-demo-app Processing Logs
        - Key: Environment
          Value: !Ref Environment
        - Key: RetentionPolicy
          Value: 30-days
  NotificationTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: !Sub tag-demo-app-${Environment}-notifications
      DisplayName: !Sub tag-demo-app production Notifications
      Tags:
        - Key: Name
          Value: !Sub tag-demo-app Notification Topic
        - Key: Environment
          Value: !Ref Environment
Outputs:
  ApplicationBucketName:
    Description: S3 Bucket Name
    Value: !Ref ApplicationBucket
    Export:
      Name: !Sub tag-demo-app-${Environment}-bucket-name
  DatabaseEndpoint:
    Description: RDS Database Endpoint
    Value: !GetAtt Database.Endpoint.Address
    Export:
      Name: !Sub tag-demo-app-${Environment}-db-endpoint
  LambdaFunctionArn:
    Description: Lambda Function ARN
    Value: !GetAtt ProcessingFunction.Arn
    Export:
      Name: !Sub tag-demo-app-${Environment}-lambda-arn
  NotificationTopicArn:
    Description: SNS Topic ARN
    Value: !Ref NotificationTopic
    Export:
      Name: !Sub tag-demo-app-${Environment}-topic-arn
  StackConfiguration:
    Description: Stack configuration summary
    Value: !Sub |
      Application: tag-demo-app
      Environment: production
      Region: us-west-2
      Database: postgres 13.7
      Backup Retention: 7 days
  StackUrls:
    Description: Useful stack URLs
    Value: !Sub |
      {
        "s3_console": "https://s3.console.aws.amazon.com/s3/buckets/${ApplicationBucket}",
        "rds_console": "https://console.aws.amazon.com/rds/home?region=${AWS::Region}#database:id=tag-demo-app-${AWS::Region}-db",
        "lambda_console": "https://console.aws.amazon.com/lambda/home?region=${AWS::Region}#/functions/tag-demo-app-${Environment}-processor",
        "cloudformation_console": "https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${AWS::StackId}"
      }
