iidy/tests/snapshots/example_templates_snapshots__auto_discovered_simple_cloudformation.snap
---
source: tests/example_templates_snapshots.rs
expression: output
---
AWSTemplateFormatVersion: 2010-09-09
Description: my-demo-app infrastructure for dev
Parameters:
  Environment:
    Type: String
    Default: dev
    Description: Deployment environment
Resources:
  S3Bucket:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName:
        "!Sub": "my-demo-app-dev-${AWS::Region}-bucket"
      Tags:
        - Key: Name
          Value: my-demo-app Storage
        - Key: Environment
          Value:
            "!Ref": Environment
        - Key: Region
          Value: us-west-2
  DatabaseInstance:
    Type: "AWS::RDS::DBInstance"
    Properties:
      DBInstanceIdentifier:
        "!Sub": my-demo-app-dev-db
      DBInstanceClass: db.t3.micro
      Engine: postgres
      MasterUsername: admin
      AllocatedStorage: 20
      Tags:
        - Key: Name
          Value: my-demo-app Development Database
        - Key: Environment
          Value: dev
  WebSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Security group for web tier
      GroupName:
        "!Sub": my-demo-app-web-dev-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: my-demo-app Web Security Group
        - Key: Environment
          Value: dev
Outputs:
  BucketName:
    Description: S3 Bucket Name
    Value:
      "!Ref": S3Bucket
    Export:
      Name:
        "!Sub": my-demo-app-dev-bucket-name
  DatabaseEndpoint:
    Description: Database endpoint URL
    Value:
      "!GetAtt": DatabaseInstance.Endpoint.Address
    Export:
      Name:
        "!Sub": my-demo-app-dev-db-endpoint
  SecurityGroupId:
    Description: Web Security Group ID
    Value:
      "!Ref": WebSecurityGroup
    Export:
      Name:
        "!Sub": my-demo-app-dev-web-sg-id
