iidy/tests/snapshots/example_templates_snapshots__auto_discovered_string_formatting_demo.snap
---
source: tests/example_templates_snapshots.rs
expression: formatted_output
---
simple_string: hello world
plain_text: normal_text_no_quotes_needed
with_colon: 'key: value syntax'
with_braces: contains {braces} and [brackets]
with_hash: 'starts with # comment character'
double_quotes_inside: He said "hello world" to everyone
single_quotes_inside: It's a beautiful day
both_quotes_inside: He said "It's working" with excitement
version_string: 2.1.0
date_string: 2024-12-25
float_like_string: '3.14159'
integer_like_string: '42'
boolean_like_true: 'true'
boolean_like_false: 'false'
boolean_like_yes: 'yes'
boolean_like_no: 'no'
boolean_like_on: 'on'
boolean_like_off: 'off'
null_like_string: 'null'
tilde_like_string: '~'
with_newlines: |-
  line1
  line2
  line3
with_tabs: 'column1	column2	column3'
with_backslashes: C:\Program Files\App
with_unicode: Hello 🌍 World
multiline_config: |
  This is a multiline string
  that spans several lines
  and preserves line breaks

  It can contain "quotes" and 'apostrophes'
  without needing to escape them!

  Perfect for configuration files:
  server:
    host: localhost
    port: 8080
    debug: true
script_example: |
  #!/bin/bash
  echo "Starting application..."

  # Set environment variables
  export APP_NAME="string-demo"
  export VERSION="1.2.3"

  # Run the application
  ./bin/app --config=/etc/app.conf

  if [ $? -eq 0 ]; then
      echo "Application started successfully"
  else
      echo "Failed to start application" >&2
      exit 1
  fi
json_config_example: |
  {
    "database": {
      "host": "db.example.com",
      "port": 5432,
      "ssl": true,
      "credentials": {
        "username": "app_user",
        "password": "secret_password_123!"
      }
    },
    "features": {
      "logging": true,
      "metrics": false,
      "debug_mode": false
    }
  }
config_map:
  simple_key: simple_value
  quoted_key: 'needs quotes: because of colon'
  version_number: 1.2.3-beta
  boolean_string: 'true'
  numeric_string: '42'
  path_with_spaces: /path/with spaces/file.txt
  command_with_quotes: echo "Hello World"
  mixed_quotes: He said 'Hello' to everyone
string_array:
  - plain_item
  - 'quoted: item'
  - single "quoted" item
  - 2024-01-01
  - 'true'
  - 'null'
  - |
    multiline item
    with multiple lines
    and preserved formatting
nested_config:
  database:
    host: localhost
    port: 5432
    credentials:
      username: app_user
      password: secret_with_"quotes"
  logging:
    level: INFO
    format: json
    output: /var/log/app.log
  features:
    debug_mode: 'false'
    api_version: v1.2.3
description: |
  This template showcases:
  - Simple strings (no quoting needed)
  - Strings requiring quotes (special chars)
  - Quote preference (single vs double)
  - Number-like strings requiring quotes
  - Boolean-like strings requiring quotes
  - Multiline strings using block scalars
  - Mixed content scenarios
  - Arrays with various string types
  - Nested structures

  All handled by our custom YAML emitter!
cloudformation_functions:
  basic_ref: !Ref MyResource
  simple_sub: !Sub Hello ${World}
  complex_sub: !Sub
    - Instance ${InstanceId} in ${Region}
    - InstanceId: !Ref EC2Instance
      Region: !Ref AWS::Region
  get_att: !GetAtt MyInstance.PublicIp
  join_function: !Join
    - ','
    - - !Ref Item1
      - !Ref Item2
      - literal_string
  select_function: !Select
    - 0
    - !GetAZs ''
  base64_function: !Base64 some data to encode
Resources:
  MyBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub ${AWS::StackName}-bucket
      Tags:
        - Key: Name
          Value: !Ref BucketNameParameter
        - Key: Environment
          Value: production
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-12345678
      InstanceType: t3.micro
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash
          echo "Hello from ${AWS::StackName}"
          aws s3 cp s3://${MyBucket}/file.txt /tmp/
Parameters:
  BucketNameParameter:
    Type: String
    Default: my-default-bucket
    Description: Name for the S3 bucket
Outputs:
  BucketArn:
    Value: !GetAtt MyBucket.Arn
    Description: ARN of the created bucket
  InstancePublicIp:
    Value: !GetAtt MyInstance.PublicIp
    Export:
      Name: !Sub ${AWS::StackName}-InstanceIP
