iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_conditional_logic.snap
---
source: tests/example_templates_snapshots.rs
expression: output
---
AWSTemplateFormatVersion: 2010-09-09
Description: "Demonstrating iidy conditional logic: !$if, !$eq, !$not, !$and, !$or"
Resources:
  MonitoringAlarm:
    Type: "AWS::CloudWatch::Alarm"
    Condition: true
    Properties:
      AlarmName: ProductionCriticalAlarm
      Threshold: 90
  DebugSettings:
    Type: "AWS::SSM::Parameter"
    Condition: false
    Properties:
      Name: /app/debug-enabled
      Value: "false"
  DatabaseInstance:
    Type: "AWS::RDS::DBInstance"
    Properties:
      DBInstanceClass: db.r5.xlarge
      MultiAZ: true
      BackupRetentionPeriod: 30
  LoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Name: production-alb
      Scheme: internet-facing
      Type: application
  S3Bucket:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName:
        - myapp-
        - production
        - "-primary"
        - "-monitored"
Outputs:
  EnvironmentType:
    Description: Environment classification
    Value: Production Environment
  DatabaseConfiguration:
    Description: Database setup summary
    Value:
      - "Environment: production, "
      - "Tier: premium, "
      - "MultiAZ: "
      - enabled
