iidy/tests/snapshots/example_templates_snapshots__auto_discovered_yaml_iidy_syntax_defs_complex_handlebars_nesting.snap
---
source: tests/example_templates_snapshots.rs
expression: formatted_output
---
output: final-prefix-1234-suffix
